# kogu

./: .gitignore  NOTICE.md  README.md
backend/: Cargo.toml
backend/src/: graph.rs  handlers.rs  lib.rs  main.rs  model.rs  mt.rs  ocr.rs  openapi.rs  recognize.rs  search.rs  state.rs  tts.rs
backend/tests/: api.rs  openapi.rs  recognize.rs
deploy/: README.md  deploy.sh  kogu-ratelimit.conf  kogu.miro.build.conf  kogu.service  wenbun-ratelimit.conf  wenbun.miro.build.conf  wenbun.service
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.sweep.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/public/api-docs/: index.html  openapi.json  scalar.min.js
frontend/public/design/: index.html
frontend/scripts/: gen-splash.py
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: Concepts.svelte  Entry.svelte  EntryRow.svelte  Glyph.svelte  IdcBox.svelte  InputSheet.svelte  LookupPanel.svelte  Ocr.svelte  Pad.svelte  ScriptForms.svelte  Unified.svelte  api.ts  display.test.ts  display.ts  modal.ts  romaji.test.ts  romaji.ts  settings.svelte.ts  speech.test.ts  speech.ts  store.test.ts  store.ts  types.ts  typo.test.ts  typo.ts
frontend/sweep/: consistency.sweep.ts
pipeline/: README.md  migrate_canto_senses.py  refresh_aliases.py  refresh_canto_missing.py  refresh_char_readings.py  refresh_concepts.py  refresh_frequency_ja.py  refresh_omw.py  refresh_orthodox.py  requirements.txt  schema.sql  sources.lock.json
pipeline/curated/: bridges_assessment.md  bridges_backlog.md  bridges_crosslang.tsv  equivalents_yue_zh.notes.md  equivalents_yue_zh.tsv
pipeline/kanzipipe/: __init__.py  build.py  db.py  extract_etymology.py  fetch.py
pipeline/kanzipipe/ingest/: __init__.py  backbone.py  cantonese.py  concepts.py  etymology.py  frequency.py  lexemes.py
pipeline/kogupipe/: __init__.py  apply_accents.py  apply_cantonese.py  apply_chengyu.py  apply_components.py  apply_confusables.py  apply_equivalents.py  apply_etymology_dedup.py  apply_frequency.py  apply_gloss_clean.py  apply_howell.py  apply_kanji_ja.py  apply_loanwords.py  apply_mapull.py  apply_mc.py  apply_native_wikt.py  apply_sense_clean.py  apply_translations.py  build.py  db.py  extract_components.py  extract_etymology.py  fetch.py  qa_audit.py  translate_etymology.py
pipeline/kogupipe/ingest/: __init__.py  accents.py  backbone.py  cantonese.py  chengyu.py  cjk_readings.py  components.py  concepts.py  confusables.py  equivalents.py  etymology.py  frequency.py  howell.py  lexemes.py  loanwords.py  mapull.py  middle_chinese.py  native_wikt.py  omw.py  romaji.py  translations.py
pipeline/scripts/: fetch_ancient.py  fetch_translations.py  gen_mc.mjs
pipeline/tests/: conftest.py  test_accents.py  test_backbone.py  test_cantonese.py  test_confusables.py  test_equivalents.py  test_frequency.py  test_gloss_clean.py  test_lexemes.py  test_loanwords.py  test_schema.py  test_translations.py
tts/: README.md  kogu-tts.service  prerender.py  synth_service.py  test_synth.py
