[package]
name = "kanzi"
version = "0.0.0"
edition = "2021"
description = "Serving binary for the kanzi CJK dictionary (Axum + SQLite/FTS5)"
license = "CC-BY-SA-4.0"
publish = false

[lib]
name = "kanzi"
path = "src/lib.rs"

[[bin]]
name = "kanzi"
path = "src/main.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-br", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
